@@ -128,4 +128,6 @@ char* get_directory(const char* filepath);
 
 void replace_string(const char* input, char** output, const char* old_str, const char* new_str);
 
+int mrt_system(const char* command, char** stdout_str, char** stderr_str);
+
 #endif
